[build-system]
requires = ["meson-python>=0.15", "numpy>=1.26", "meson>=1.3"]
build-backend = "mesonpy"

[project]
name = "eos_nuclear"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "h5py"]
description = "Python wrapper for the nuclear EOS table driver (stellarcollapse.org)"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Kuo-Chuan Pan", email = "kuochuan.pan@gapp.nthu.edu.tw"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/kuochuanpan/eos_nuclear"
